Fix T79497: Crash when removing strips with prefetching

This was already fixed by 0471349c90df but accidentally removed in refactor.